Improve IR test